--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@500&display=swap');
 
-
 *{
     box-sizing: border-box;
     padding:0;
     margin:0;
 }
 body{
+    
     font-size:15px;
     font-family: 'Outfit', sans-serif;
 }
@@ -16,41 +16,35 @@ body{
     display:flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
 }
 .qr{
-    /* display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; */
     text-align: center;
     background-color: hsl(0, 0%, 100%);
     max-width: 300px;
     height: 500px;
     border-radius: 10px;
 }
-.qrimage , .discription{
-    flex:1;
-    margin:10px;
-}
-.qrimage{ 
+.qrimage{
+    margin:10px; 
     max-width: 280px;
+    width:100%;
     border-radius: 10px;
+    overflow:hidden;
 }
-/* .discription{
-  text-align: center;
-} */
-.discription h1{
+h1{
     font-size: 1.5rem;
     font-weight: 500;
     margin-block-end: 1.5rem;
 }
-.discription p{
+.container p{
     color:#929292;
+    margin:10px;
 }
-/* .footer{
-    margin-top: 10px;
-} */
+.footer{
+    
+    position:absolute;
+    bottom: 0;   
+}
  
 
 
